rancher/common/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: defectdojo
spec:
  rules:
  - host: dev-defectdojo.rancher.company.com
    http:
      paths:
      - path: /
        backend:
          serviceName: defectdojo 
          servicePort: 8080
  tls:
  - hosts:
     - dev-defectdojo.rancher.company.com
